Fixed spacing issue between weather alert and cards

--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,7 @@ body {
 
 .weather-alert {
   margin-top: 1em;
+  margin-bottom: 0rem;
   max-width: 90%;
 }
 
